# sigmoid_like_tf_op

./: CMakeLists.txt  README.md  sigmoid_like.py  test.py
src/: sigmoid.cpp  sigmoid.cu  sigmoid.h
